# thespartan

./: .env.example  .gitignore  Dockerfile  LLM.md  Makefile  README.md  SPARTAN_ARCHITECTURE.md  docker-compose.yml  fix-workspace-permissions.sh  pyproject.toml  setup.sh  test_stage3.py
scripts/: config.sh  entrypoint.sh
spartan/: __init__.py
spartan/core/: backend.py  config.py  controller.py  langfuse.py  pipeline.py  pipelines.py  sandbox.py  session.py
spartan/interface/: main.py  styles.tcss
spartan/prompts/: stages.py
spartan_legacy/: __init__.py  _version.py  config.py  main.py  smoke_test.py  test_connection.py
spartan_legacy/llm/: __init__.py  base.py  client.py  config.py  factory.py  registry.py
spartan_legacy/llm/providers/: __init__.py  openai_compatible.py
spartan_legacy/prompts/: prompt_class.py
spartan_legacy/utils/: prompt_select.py  report_generator.py  spartan.py  task_handler.py
tests/: __init__.py  conftest.py
tests/docker/: __init__.py  test_container_health.py
tests/integration/: __init__.py  test_controller.py
tests/legacy/: test_client.py  test_config.py  test_factory.py  test_registry.py
tests/unit/: __init__.py  test_backend_interface.py  test_config.py  test_events.py  test_flag_detection.py  test_langfuse.py  test_pipeline.py  test_pipelines_factory.py  test_session.py  test_stage_prompts.py
